2016-07-06  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Add test suite, with simple test case.

	* configure.ac, Makefile.am:
	  - Add tests/ subdir.

	* +tests/Makefile.am, +tests/test-simple.sh:
	  - Add a simple test case.

2016-07-03  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix mem leak on file format error.

	* src/wordseg.cpp (main):
	  - Exit word segmentation before exiting program.

2016-07-02  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Check memory failure in InitWordSegmentation().

	* src/wordseg.cpp (InitWordSegmentation):
	  - Exit on memory allocation failure.

2016-07-02  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Simplify InitWordSegmentation().

	* src/wordseg.cpp (InitWordSegmentation):
	  - Rewrite to return (AbsWordSeg*), with NULL indicating failure.
	  - Simplify method determination logic, with fallback.
	  - Simplify dictionary trial logic.

	* src/wordseg.cpp (main):
	  - Call InitWordSegmentation() with new convention.

2016-07-01  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Support longer line length.

	* src/worddef.h (MAXLEN, MAXSEP):
	  - Increase max line length and max words by 3 times,
	    to support longer paragraphs. We had better address this
	    with resizable buffers, but the change would be too deep
	    for now.

	* src/worddef.h (-MAXCHOICE, -MAXTAG):
	  - Drop unused macros.

	Thanks Santi Romeyen for the report via a personal e-mail.

2016-07-01  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update dictionary from thailatex GitHub.

	* data/tdict-city.txt:
	* data/tdict-common.txt:
	* data/tdict-country.txt:
	* data/tdict-district.txt:
	* data/tdict-ict.txt:
	* data/tdict-lang-ethnic.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt:
	* data/tdict-spell.txt:
	  - Update dictionary from dehyphenated source for thailatex
	    hyphenation patterns.

2016-06-21  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Interpret word break string using output encoding.
