@@ -1,0 +1,1 @@
+เหมือน|เป็น|สัญญาณ|จาก|ทาง|คณะ|รักษา|ความ|สงบ|แห่ง|ชาติ|และ|ฝ่าย|ที่|อยู่|ตรง|ข้าม|เข้าใจ|ตรง|กัน|ว่า สนาม|การ|ลง|คะแนน|ประชามติ|ของ|ร่าง|รัฐธรรมนูญ|มี|ความหมาย|ต่อ|ความ|ชอบธรรม|ใน|การ|บริหาร|ราชการ|แผ่นดิน|ของ|รัฐบาล|ที่|มา|จาก|การ|ควบคุม|อำนาจ|เป็น|อย่าง|ยิ่ง เพราะ|ผล|ที่|ออก|มา|นั้น|ชี้|วัด|ถึง|ทัศนคติ|ของ|คน|ใน|สังคม|ที่|จะ|เลือก|ว่า|รัฐบาล|ทหาร|เดิน|มา|ถูก|ทาง|และ|ถูกใจ|คน|ส่วน|ใหญ่|หรือ|ไม่ เอา|เข้า|จริง|คะแนน|เสียง|ที่|ออก|มาก|ลับ|ปฏิเสธ|อำนาจ|ทหาร|ด้วย|เงื่อนไข|บาง|ประการ|ที่|ผูก|เป็น|เงื่อน|ปม|ใน|รัฐธรรมนูญ หรือ|สังคม|กลับ|กลัว|การ|กลับ|มา|ของ|เผด็จการ|รัฐสภา และ|การ|ผูกขาด|อำนาจ|ของ|ทุน|การเมือง|ที่|เกิด|ขึ้น|มา|ใน|อดีต จึง|เห็น|ชอบ|กับ|ร่าง|รัฐธรรมนูญ|นี้ เมื่อ|วัน|ก่อน นาย|ณัฐวุฒิ ใส|ย|เกื้อ แกน|นำ|แนวร่วม|ประชาธิปไตย|ต่อต้าน|เผด็จการ|แห่ง|ชาติ พูด|ถึง|การ|ลง|ประชามติ|คือ|สนาม|การ|ต่อสู้|แล้ว ยิ่ง|ทำให้|เห็น|ว่า|ระหว่าง|ทาง|ที่|จะ|ไป|ถึง|วัน|นั้น สถานการณ์|น่า|จะ|เข้มข้น|มาก|ขึ้น เนื่อง|จาก|ผลลัพธ์|ที่|ออก|มา|มี|เดิมพัน|สูง|มาก การ|งัด|กลยุทธ์ การ|ทำลาย|จุด|อ่อน|ของ|ฝ่าย|ตรง|ข้าม|ย่อม|มี|ความ|จำเป็น ขณะ|ที่|ฝ่าย|คณะ|รักษา|ความ|มั่นคง|แห่ง|ชาติ|และ|รัฐบาล คือ|ฝ่าย|ที่|ถือ|อำนาจ|รัฐ พร้อม|ทั้ง|ได้|สร้าง|กฎเกณฑ์ กฎ|เหล็ก ขึ้น|มา|มากมาย|เพื่อ|ป้องกัน|การ|ใช้|กลไก|ใน|โลก|ของ|โซเชียล|มีเดีย ขยาย|จุด|อ่อน|ของ|ร่าง|รัฐธรรมนูญ จน|มี|ผล|ที่|ทำให้|คน|ที่|อยู่|ระหว่าง|กลาง|ที่|เป็น|ฝ่าย|เสรีนิยม|เกิด|ปฏิกิริยา|ต่อต้าน แน่นอน|ว่า ด้วย|พลัง|อำนาจ|อัน|มหาศาล|จาก|การ|เป็น|รัฏฐาธิปัตย์ การ|มี|กอง|กำลัง|รักษา|ความ|สงบ|เรียบร้อย จาก|การ|ใช้|ทหาร|ใน|ประจำการ|เข้า|มา|ทำ|หน้าที่|ดูแล|สถานการณ์ การ|ออก|คำ|สั่ง ประกาศ การ|แก้ไข|กฎหมาย|เพิ่ม|โทษ|ของ|ผู้|กระทำ|ผิด|ที่|เกิด|จาก|ความ|มั่นคง|เริ่ม|มี|มาก|ขึ้น โดย|เฉพาะ|การ|แก้ไข|พระ|ราช|บัญญัติ|คอมพิวเตอร์ ฝ่าย|คณะ|รักษา|ความ|สงบ|แห่ง|ชาติ|ย่อม|คาด|หวัง|ต่อ|เครื่องมือ|เหล่า|นั้น ไม่|ต้องการ|ให้|กลุ่ม|ต่อต้าน|รัฐธรรมนูญ|ทำ|อะไร|ไม่|ได้|สะดวก|ใจ จุด|ประสงค์|คือ|ผลักดัน|ให้|ร่าง|รัฐธรรมนูญ|ได้|รับ|ความเห็น|ชอบ|จาก|ประชาชน|อย่าง|ท่วมท้น|โดย|ไม่|มี|ขบวนการ|ใด|มา|ขัด|ขวาง ทั้ง|ที่|รัฐธรรมนูญ|ไม่|ผ่าน|ประชามติ ก็|ยัง|มี|อำนาจ|ใน|การ|ดำเนิน|การ|ยำ|เนื้อหา|ร่าง|รัฐธรรมนูญ|ใหม่|ได้ นั่น|เพราะ|คำ|ว่า|ความ|ชอบธรรม|ใน|การ|ดำรง|อยู่|ของ|คณะ|รักษา|ความ|สงบ|แห่ง|ชาติ|เป็น|เรื่อง|สำคัญ|ที่สุด จาก|นี้|ไป|อีก|ปีก|ว่า คณะ|รักษา|ความ|สงบ|แห่ง|ชาติ|จะ|ต้อง|เจอ|กับ|แรง|ปะทะ|อีก|มากมาย เพราะ|การ|ลง|สนาม|แข่งขัน|ใหญ่|ใน|การ|เลือกตั้ง|นั้น|ไม่|มี|ชิ้น|ปลา|มัน หรือ|อำนาจ|สิทธิ์ขาด|ให้|กับ|นัก|เลือกตั้ง|ได้|เข้า|มา|คุม|อำนาจ|ได้|อย่าง|เบ็ดเสร็จ|หลัง|การ|เลือกตั้ง ซึ่ง|นั่น|ก็|เป็น|เหตุผล|สำคัญ|หนึ่ง|ที่|เกิด|การ|เคลื่อนไหว|อย่าง|หนัก|ใน|การ|คัดค้าน|ร่าง|รัฐธรรมนูญ|ที่|มี|คำ|ถาม|พ่วง ที่|ถูก|วิจารณ์|ว่า|เป็น|การ|สืบทอด|อำนาจ|ทหาร และ|จะ|กลาย|เป็น|ประเด็น|ที่|กลาย|เป็น|เป้า|ใหญ่|ให้|ฝ่าย|ที่|ไม่|เห็นด้วย|นำ|ไป|โจมตี เพราะ|เป็น|ที่|รู้|กัน|ว่า|ทหาร|ต้องการ|เป็น|เงา|คู่|ขนาน|ผ่าน|อำนาจ|ของ|สมาชิก|วุฒิสภา และ|เรื่อง|ของ|นายก|รัฐมนตรี|คน|นอก|ไป|อีก|หลาย|ปี|หลัง|การ|เลือกตั้ง การ|เดิน|หน้า|เอา|ผิด|กับ|กลุ่ม หรือ|ขบวนการ|ที่|ใช้|โซเชียล|มีเดีย|ใน|การ|ดิสเครดิต|รัฐบาล|และ|คณะ|รักษา|ความ|สงบ|แห่ง|ชาติ|ใน|ขณะ|นี้ แม้|รัฐ|จะ|ไม่|ได้|มี|เป้าหมาย|ให้|ได้|รับ|โทษ|หนัก|เท่า|ไหร่|นัก แต่|ใน|แง่|ของ|คณะ|รักษา|ความ|สงบ|แห่ง|ชาติ|ก็|หวัง|ผล|ใน|เชิง|จิตวิทยา ให้|คน|ที่|เคลื่อนไหว|ใน|ระดับ|ย่อย|ระมัดระวัง|และ|เกรงกลัว|ที่|จะ|โพสต์|ข้อความ|เรื่อง|รัฐธรรมนูญ โดย|งัด|เอา|พระ|ราช|บัญญัติ|ว่าด้วย|การ|ออก|เสียง|ประชามติ|มา|เป็น|อาวุธ ประกอบ|กับ|การ|ที่|สภา|นิติบัญญัติ|แห่ง|ชาติ|แก้ไข|พระ|ราช|บัญญัติ|คอมพิวเตอร์|เพิ่ม|โทษ ก็|ยิ่ง|ทำให้|เครื่องมือ|ใน|การ|ห้าม|เข้มข้น|ขึ้น แต่|ใน|อีก|แง่|หนึ่ง|ก็|ต้อง|เสี่ยง|กับ|การ|ถูก|มอง|ภาพ|จาก|คน|ที่|มี|เจตนา|ดี|ใน|การ|วิพากษ์|วิจารณ์ ว่า|รัฐ|ปิด|กั้น|ใน|การ|แสดง|ความคิด|เห็น|มาก|เกิน|ไป|จน|กระดิก|ตัว|ไม่|ได้ กระทบ|ต่อ|แนวร่วม|ของ|คณะ|รักษา|ความ|สงบ|แห่ง|ชาติ|ที่|พร้อม|หนุน ดังนั้น|เจ้าหน้าที่|รัฐ|เอง|ก็|ต้อง|แยกแยะ ดำเนิน|การ และ|ชี้แจง|อย่าง|เป็น|ระบบ ใน|การ|แบ่ง|ให้|เห็น|ถึง|คน|ที่|ปฏิบัติ|และ|คน|ที่|อยู่|เบื้องหลัง รวม|ไป|ถึง|คน|ที่|อยาก|แสดง|ความคิด|เห็น|ต่อ|ร่าง|รัฐธรรมนูญ|อย่าง|บริสุทธิ์|ใจ และ|พร้อม|ที่|จะ|รับ|ได้|กับ|คำ|ว่า|สืบทอด|อำนาจ ใน|ขณะ|เดียวกัน การ|จัด|ทำ|ผัง|ล้ม|คณะ|รักษา|ความ|สงบ|แห่ง|ชาติ|ที่|เจ้าหน้าที่|ได้|แจกจ่าย|นั้น ก็|เหมือน|เป็น|การ|ยืนยัน|ใน|หลักฐาน|ใน|ชั้น|พนักงาน|สอบสวน|ว่า|มี|ความ|เชื่อม|โยง การ|ใช้|ไม้|แข็ง|โดย|ใช้|กฎหมาย|อย่าง|เต็ม|รูปแบบ|กับ|ปลา|ซิว|ปลา|สร้อย|แทน|การ|ปรับ|ทัศนคติ|ใน|ช่วง|ก่อนหน้า|นี้ ก็|ต้อง|มี|การ|ประเมิน|ให้|ดี|ว่า|จะ|เป็น|ผล|ดี|มาก|กว่า|ผล|เสีย หรือ|แท้|ที่|จริง|แล้ว|ยิ่ง|สร้าง|แนวร่วม|แห่ง|ความ|เกลียด|ชัง เรา|จึง|หวัง|ว่า ชัย|ชนะ|ใน|ประชามติ|ร่าง|รัฐธรรมนูญ|ที่|จะ|มี|ขึ้น|ใน|อีก|สอง|เดือน|ข้าง|หน้า ที่|สอง|ฝ่าย|มอง|ว่า|นั่น|คือ|สนาม|การ|แข่งขัน|ของ|จริง โดย|มี|เสียง|ของ|ประชาชน|เป็น|เดิมพัน|นั้น ไม่|ใช่|บท|สรุป|ทั้งหมด กล่าว|คือ ถ้า|ฝ่าย|หนึ่ง|ได้|คะแนน|เสียง|มาก|กว่า คือ|ชย|ชนะ|แห่ง|หลักการ|ประชาธิปไตย หรือ|อีก|ฝ่าย|หนึ่ง|ได้|มาก|กว่า คือ|ความ|ชอบธรรม|ของ|อำนาจ|ทหาร|ใน|การ|ปกครอง|ประเทศ เรา|เชื่อ|ว่า|นั่น|ไม่|ใช่|ชัย|ชนะ|ของ|ประชาชน|อย่าง|แท้|จริง และ|กว่า|จะ|ถึง|วัน|นั้น|ก็|ยัง|ไม่|รู้|ว่า|จะ|มี|ผู้|ถูก|จับกุม|ดำเนิน|คดี|อีก|เท่า|ไหร่ จะ|เกิด|ปรากฏการณ์|ทางการ|เมือง|ที่|วุ่นวาย|จน|ใน|ที่สุด|ต้อง|ปิด|สนาม|การ|แข่งขัน|ลง|หรือ|ไม่
