@@ -1,0 +1,1 @@
+เหมือนเป็นสัญญาณจากทางคณะรักษาความสงบแห่งชาติและฝ่ายที่อยู่ตรงข้ามเข้าใจตรงกันว่า สนามการลงคะแนนประชามติของร่างรัฐธรรมนูญมีความหมายต่อความชอบธรรมในการบริหารราชการแผ่นดินของรัฐบาลที่มาจากการควบคุมอำนาจเป็นอย่างยิ่ง เพราะผลที่ออกมานั้นชี้วัดถึงทัศนคติของคนในสังคมที่จะเลือกว่ารัฐบาลทหารเดินมาถูกทางและถูกใจคนส่วนใหญ่หรือไม่ เอาเข้าจริงคะแนนเสียงที่ออกมากลับปฏิเสธอำนาจทหารด้วยเงื่อนไขบางประการที่ผูกเป็นเงื่อนปมในรัฐธรรมนูญ หรือสังคมกลับกลัวการกลับมาของเผด็จการรัฐสภา และการผูกขาดอำนาจของทุนการเมืองที่เกิดขึ้นมาในอดีต จึงเห็นชอบกับร่างรัฐธรรมนูญนี้ เมื่อวันก่อน นายณัฐวุฒิ ใสยเกื้อ แกนนำแนวร่วมประชาธิปไตยต่อต้านเผด็จการแห่งชาติ พูดถึงการลงประชามติคือสนามการต่อสู้แล้ว ยิ่งทำให้เห็นว่าระหว่างทางที่จะไปถึงวันนั้น สถานการณ์น่าจะเข้มข้นมากขึ้น เนื่องจากผลลัพธ์ที่ออกมามีเดิมพันสูงมาก การงัดกลยุทธ์ การทำลายจุดอ่อนของฝ่ายตรงข้ามย่อมมีความจำเป็น ขณะที่ฝ่ายคณะรักษาความมั่นคงแห่งชาติและรัฐบาล คือฝ่ายที่ถืออำนาจรัฐ พร้อมทั้งได้สร้างกฎเกณฑ์ กฎเหล็ก ขึ้นมามากมายเพื่อป้องกันการใช้กลไกในโลกของโซเชียลมีเดีย ขยายจุดอ่อนของร่างรัฐธรรมนูญ จนมีผลที่ทำให้คนที่อยู่ระหว่างกลางที่เป็นฝ่ายเสรีนิยมเกิดปฏิกิริยาต่อต้าน แน่นอนว่า ด้วยพลังอำนาจอันมหาศาลจากการเป็นรัฏฐาธิปัตย์ การมีกองกำลังรักษาความสงบเรียบร้อย จากการใช้ทหารในประจำการเข้ามาทำหน้าที่ดูแลสถานการณ์ การออกคำสั่ง ประกาศ การแก้ไขกฎหมายเพิ่มโทษของผู้กระทำผิดที่เกิดจากความมั่นคงเริ่มมีมากขึ้น โดยเฉพาะการแก้ไขพระราชบัญญัติคอมพิวเตอร์ ฝ่ายคณะรักษาความสงบแห่งชาติย่อมคาดหวังต่อเครื่องมือเหล่านั้น ไม่ต้องการให้กลุ่มต่อต้านรัฐธรรมนูญทำอะไรไม่ได้สะดวกใจ จุดประสงค์คือผลักดันให้ร่างรัฐธรรมนูญได้รับความเห็นชอบจากประชาชนอย่างท่วมท้นโดยไม่มีขบวนการใดมาขัดขวาง ทั้งที่รัฐธรรมนูญไม่ผ่านประชามติ ก็ยังมีอำนาจในการดำเนินการยำเนื้อหาร่างรัฐธรรมนูญใหม่ได้ นั่นเพราะคำว่าความชอบธรรมในการดำรงอยู่ของคณะรักษาความสงบแห่งชาติเป็นเรื่องสำคัญที่สุด จากนี้ไปอีกปีกว่า คณะรักษาความสงบแห่งชาติจะต้องเจอกับแรงปะทะอีกมากมาย เพราะการลงสนามแข่งขันใหญ่ในการเลือกตั้งนั้นไม่มีชิ้นปลามัน หรืออำนาจสิทธิ์ขาดให้กับนักเลือกตั้งได้เข้ามาคุมอำนาจได้อย่างเบ็ดเสร็จหลังการเลือกตั้ง ซึ่งนั่นก็เป็นเหตุผลสำคัญหนึ่งที่เกิดการเคลื่อนไหวอย่างหนักในการคัดค้านร่างรัฐธรรมนูญที่มีคำถามพ่วง ที่ถูกวิจารณ์ว่าเป็นการสืบทอดอำนาจทหาร และจะกลายเป็นประเด็นที่กลายเป็นเป้าใหญ่ให้ฝ่ายที่ไม่เห็นด้วยนำไปโจมตี เพราะเป็นที่รู้กันว่าทหารต้องการเป็นเงาคู่ขนานผ่านอำนาจของสมาชิกวุฒิสภา และเรื่องของนายกรัฐมนตรีคนนอกไปอีกหลายปีหลังการเลือกตั้ง การเดินหน้าเอาผิดกับกลุ่ม หรือขบวนการที่ใช้โซเชียลมีเดียในการดิสเครดิตรัฐบาลและคณะรักษาความสงบแห่งชาติในขณะนี้ แม้รัฐจะไม่ได้มีเป้าหมายให้ได้รับโทษหนักเท่าไหร่นัก แต่ในแง่ของคณะรักษาความสงบแห่งชาติก็หวังผลในเชิงจิตวิทยา ให้คนที่เคลื่อนไหวในระดับย่อยระมัดระวังและเกรงกลัวที่จะโพสต์ข้อความเรื่องรัฐธรรมนูญ โดยงัดเอาพระราชบัญญัติว่าด้วยการออกเสียงประชามติมาเป็นอาวุธ ประกอบกับการที่สภานิติบัญญัติแห่งชาติแก้ไขพระราชบัญญัติคอมพิวเตอร์เพิ่มโทษ ก็ยิ่งทำให้เครื่องมือในการห้ามเข้มข้นขึ้น แต่ในอีกแง่หนึ่งก็ต้องเสี่ยงกับการถูกมองภาพจากคนที่มีเจตนาดีในการวิพากษ์วิจารณ์ ว่ารัฐปิดกั้นในการแสดงความคิดเห็นมากเกินไปจนกระดิกตัวไม่ได้ กระทบต่อแนวร่วมของคณะรักษาความสงบแห่งชาติที่พร้อมหนุน ดังนั้นเจ้าหน้าที่รัฐเองก็ต้องแยกแยะ ดำเนินการ และชี้แจงอย่างเป็นระบบ ในการแบ่งให้เห็นถึงคนที่ปฏิบัติและคนที่อยู่เบื้องหลัง รวมไปถึงคนที่อยากแสดงความคิดเห็นต่อร่างรัฐธรรมนูญอย่างบริสุทธิ์ใจ และพร้อมที่จะรับได้กับคำว่าสืบทอดอำนาจ ในขณะเดียวกัน การจัดทำผังล้มคณะรักษาความสงบแห่งชาติที่เจ้าหน้าที่ได้แจกจ่ายนั้น ก็เหมือนเป็นการยืนยันในหลักฐานในชั้นพนักงานสอบสวนว่ามีความเชื่อมโยง การใช้ไม้แข็งโดยใช้กฎหมายอย่างเต็มรูปแบบกับปลาซิวปลาสร้อยแทนการปรับทัศนคติในช่วงก่อนหน้านี้ ก็ต้องมีการประเมินให้ดีว่าจะเป็นผลดีมากกว่าผลเสีย หรือแท้ที่จริงแล้วยิ่งสร้างแนวร่วมแห่งความเกลียดชัง เราจึงหวังว่า ชัยชนะในประชามติร่างรัฐธรรมนูญที่จะมีขึ้นในอีกสองเดือนข้างหน้า ที่สองฝ่ายมองว่านั่นคือสนามการแข่งขันของจริง โดยมีเสียงของประชาชนเป็นเดิมพันนั้น ไม่ใช่บทสรุปทั้งหมด กล่าวคือ ถ้าฝ่ายหนึ่งได้คะแนนเสียงมากกว่า คือชยชนะแห่งหลักการประชาธิปไตย หรืออีกฝ่ายหนึ่งได้มากกว่า คือความชอบธรรมของอำนาจทหารในการปกครองประเทศ เราเชื่อว่านั่นไม่ใช่ชัยชนะของประชาชนอย่างแท้จริง และกว่าจะถึงวันนั้นก็ยังไม่รู้ว่าจะมีผู้ถูกจับกุมดำเนินคดีอีกเท่าไหร่ จะเกิดปรากฏการณ์ทางการเมืองที่วุ่นวายจนในที่สุดต้องปิดสนามการแข่งขันลงหรือไม่
